# voice-assistant

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  default_workflow.json  docker-compose.yml  dump.sql  gemini.md  intent_extractor_config.json  patch_sqlite_web.py  ptt_voice.py  pyproject.toml  recover.patch  reproduce_fts_isolation.py  reproduce_fts_isolation_v2.py  reproduce_leak.py  start.sh  stdout  test_imports.py  test_name_error.py  test_row_factory.py  vibe-report.skill  workflow_config.json
.claude/: settings.json
data/: vibe_report.html  voice_assistant_store.sqlite3.bak.20260425131056  voice_assistant_store.sqlite3.bak.202604252200
docs/: mac_gui_siri_style_single_turn_flow.md  system_architecture.md
mac_gui/: Package.resolved  Package.swift
press_to_talk/: __init__.py  __main__.py  cli.py  core.py  events.py  regression.py  storage_cli.py  web_app.py
scripts/: ci_check.py  deploy.sh  generate_vibe_report.py  merge_remote_db.py  migrate_mem0_app_id.py  migrate_v2_peewee.py  render_chimes.py  storage_cli.sh
testdata/: intent_samples.jsonl
tests/: live_llm_probe.py  mem0_e2e.py  repro_api_changes.py  repro_fail.py  test_api_endpoints_coverage.py  test_api_photo_attachment.py  test_api_production_vibe.py  test_api_query_robustness.py  test_auth_failures.py  test_bt_base.py  test_bt_fallback.py  test_bt_nodes.py  test_config_validation.py  test_core_behaviors.py  test_database_connection.py  test_date_range_query.py  test_error_handling.py  test_execution_modes.py  test_fts_rebuild_verification.py  test_gui_events.py  (+9 more)
(+111 files in other folders)
