[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "press-to-talk"
version = "0.1.0"
description = "Push-to-talk recorder that sends transcript to OpenClaw and speaks replies with qwen-tts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.2.0",
  "sounddevice>=0.5.2",
  "openai>=1.40.0",
  "mem0ai>=1.0.11",
  "pynput>=1.7.7",
  "rich>=13.7.0",
  "mcp>=1.2.1",
  "vibe-colored-logger>=0.1.7",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
press-to-talk = "press_to_talk.cli:run_as_console_script"
ptt-voice = "press_to_talk.cli:run_as_console_script"
ptt-storage = "press_to_talk.storage.cli_app:run_as_console_script"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["press_to_talk*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
